--- a/src/components/Body/Login/Login.scss
+++ b/src/components/Body/Login/Login.scss
@@ -17,6 +17,12 @@
     font-size: 16px;
   }
 
+  &__error {
+    margin-bottom: 10px;
+    color: red;
+    font-size: 14px;
+  }
+
   &__login-btn {
     margin-bottom: 40px;
     width: 322px;
