--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,8 @@ $color-text: #000000;
 $color-textBG: #a09c9f;
 $color-blue: #00BFF3;
 $color-green: #42B72A;
+$green-hover: #68D751;
+$green-active: #328920;
 $color-dark: #363636;
 $color-hover: #37D4FF;
 $color-active: #008FB6;
