--- a/src/components/UI/CustomButton.module.scss
+++ b/src/components/UI/CustomButton.module.scss
@@ -10,14 +10,29 @@
   width: 100%;
   height: 100%;
   color: $color-mainBG;
+  font-weight: 700;
 
   &:hover {
     background-color: $color-hover;
-    box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 4px 5px rgba($color-mainBG, 0.1);
   }
 
   &:active {
     box-shadow: none;
     background-color: $color-active;
+  }
+}
+
+.green {
+  background-color: $color-green;
+
+  &:hover {
+    background-color: $green-hover;
+    box-shadow: 0px 4px 5px rgba($color-text, 0.1);
+  }
+
+  &:active {
+    box-shadow: none;
+    background-color: $green-active;
   }
 }
