--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,8 +36,35 @@
   }
 
   &__btn {
-    margin: 0 0 0 15px;
+    margin: 0 0 0 30px;
     width: 80px;
     height: 25px;
+  }
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  color: $color-mainBG;
+
+  &__balance {
+    margin: 0 60px ;
+  }
+
+  &__img {
+    width: 40px;
+    height: 40px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
+  }
+
+  &__nick {
+    margin: 0 14px;
   }
 }
