feat: create headercoins.tsx and style

--- a/src/components/Body/Coins/Coins.module.scss
+++ b/src/components/Body/Coins/Coins.module.scss
@@ -1,3 +1,12 @@
-.coins {
+@import "../../../style/variables";
 
+
+.coins {
+  margin: 20px 25px 0px;
+  color: $color-text;
+  font-weight: 700;
+
+  &__contsiner {
+
+  }
 }
