--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -67,4 +67,23 @@
   &__nick {
     margin: 0 14px;
   }
+
+  &__wallet {
+    width: 40px;
+    height: 40px;
+
+    a {
+      :hover {
+        transition: all 0.5s ease;
+        transform: scale(1.2);
+      }
+
+      :active {
+        position: relative;
+        transition: all 0.3s ease;
+        top: 2px;
+        transform: scale(1.2);
+      }
+    }
+  }
 }
