--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -8,3 +8,6 @@ $green-active: #328920;
 $color-dark: #363636;
 $color-hover: #37D4FF;
 $color-active: #008FB6;
+$color-red: #D50001;
+$red-hover: #FF2021;
+$red-active: #A00001;
