--- a/src/components/UI/CustomButton.module.scss
+++ b/src/components/UI/CustomButton.module.scss
@@ -36,3 +36,17 @@
     background-color: $green-active;
   }
 }
+
+.red {
+  background-color: $color-red;
+
+  &:hover {
+    background-color: $red-hover;
+    box-shadow: 0px 4px 5px rgba($color-text, 0.1);
+  }
+
+  &:active {
+    box-shadow: none;
+    background-color: $red-active;
+  }
+}
